--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,21 @@
+# March 2017
+
+Use `git checkout v1703`.
+
+* Added a GIFT-Grab Python API.
+* GIFT-Grab is now also available for installation from the Python Package Index via the pip installation tool.
+* Added support for:
+  * Blackmagic DeckLink SDI 4K
+  * I420 and UYVY colour spaces (see documentation)
+  * capturing network streams
+  * writing video files (Xvid, HEVC, VP9)
+  * real-time video encoding
+  * reading videa files (HEVC and VP9)
+  * video processing pipelines using callbacks
+  * processing video data using NumPy and SciPy routines
+* Added a test suite
+
+
 # December 2015
 
 Use `git checkout v1512`.
